--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,6 +51,11 @@
     <string name="serial_number">Serial number:</string>
     <string name="instruction_set">Instruction set:</string>
 
+    <string name="category_connectivity">Connectivity</string>
+    <string name="telephony">Telephony</string>
+    <string name="connections">Connections</string>
+    <string name="network_interfaces">Network interfaces</string>
+
     <string name="navigation_trackball">trackball</string>
     <string name="navigation_wheel">wheel</string>
     <string name="navigation_no_navigation">no navigation</string>
@@ -70,7 +75,12 @@
     <string name="screensize_large">large</string>
     <string name="screensize_xlarge">xlarge</string>
 
+    <string name="connected">connected</string>
+    <string name="not_available">not available</string>
+
     <string name="unknown">unknown</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
 
     <string name="error_saving_file">An error occured, file was NOT saved.</string>
     <string name="error_storage_not_available">External storage is not available at the moment.
@@ -78,5 +88,7 @@
     <string name="configuration_title">Configuration of %s</string>
     <string name="configuration_saved">Configuration saved as \'%s\' to the external storage.
     </string>
+
+
 
 </resources>
