--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Config Reader</string>
+    <string name="app_name">Device Info Reader</string>
 
     <string name="menu_share">Share</string>
     <string name="menu_save">Save to file</string>
