--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="cpu_type">Type:</string>
     <string name="cores">Cores:</string>
     <string name="features">Features:</string>
+    <string name="cpu_manufacturer">Manufacturer:</string>
 
     <string name="category_connectivity">Connectivity</string>
     <string name="telephony">Telephony</string>
